name:                elm-johnny-five
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8,
                       Elm,
                       language-ecmascript,
                       pretty-show,
                       shakespeare,
                       blaze-markup,
                       template-haskell,
                       text,
                       aeson,
                       scientific,
                       void
  exposed-modules:     Elm.JohnnyFive
                       Elm.Wrapper
                       Elm.Wrapper.Quote
  hs-source-dirs:      src
  default-language:    Haskell2010
